# StreamOverlord

./: .gitignore  CMakeLists.txt  CNAME  README.md  index.md
cmake/: CompilerSetup.cmake  GetGoogletest.cmake  GetSpdlog.cmake
src/: CMakeLists.txt  Event.h  dist.qrc  main.cpp  qml.qrc
src/common/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  Event.cpp  GitInfo.cpp.in  GitInfo.h  Logging.cpp  Logging.h  NonceGenerator.cpp  NonceGenerator.h  VersionInfo.cpp  VersionInfo.h
src/net/: CMakeLists.txt  NetworkManager.cpp  NetworkManager.h  OAuthHTTPServer.cpp  OAuthHTTPServer.h
src/twitch/: CMakeLists.txt  OAuthScopes.cpp  OAuthScopes.h  TokenManager.cpp  TokenManager.h  TokenObtainer.cpp  TokenObtainer.h  TwitchSSO.cpp  TwitchSSO.h
src/ui/: AboutDialog.qml  Backend.cpp  Backend.h  CMakeLists.txt  ChangesModel.cpp  ChangesModel.h  Configuration.qml  DirectoriesDialog.qml  EventList.qml  EventModel.cpp  EventModel.h  MainGUI.cpp  MainGUI.h  PasswordField.qml  QMLRegistrations.cpp  QMLRegistrations.h  WarningDialog.qml  main.qml  qml.qrc
tests/: CMakeLists.txt
tests/common/: CMakeLists.txt  ConfigManager.cpp
tools/: ClearRegistryEntries.cmd
